Test failure resolved